version/0.27/_sources/api/solver/_autosummary/settings/resize.rst.txt
:orphan:

.. _resize:

resize
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.resize
    :show-inheritance:

.. rubric:: Arguments

==================   =============================

Argument                                   Summary

==================   =============================
:ref:`size <size>`       New size for list-object.

==================   =============================

.. rubric:: Included in:

========================================================================================   ==========================================================================

Parent                                                                                                                                                        Summary

========================================================================================   ==========================================================================
:ref:`expert <expert>`                                                                                                                Expert options in Park's model.

:ref:`data_points <data_points>`                                                                             Specify ranges and values for piecewise-linear property.

:ref:`contact_resis <contact_resis>`                                                                                                      Contact Resistance Regions.

:ref:`internal_resistance_table <internal_resistance_table>`                                                             Internal resistance table in the NTGK model.

:ref:`limit_current_table <limit_current_table>`                                                                               Current limit table in the NTGK model.

:ref:`fast_charging_table <fast_charging_table>`                                                                                             Set fast charging table.

:ref:`contact_resistance <contact_resistance>`                                                                                            Contact resistance regions.

:ref:`test_data_sets <test_data_sets>`                                                                                                         Define test data sets.

:ref:`translation_rotation_matrix <translation_rotation_matrix>`                                  Data class to hold translation-rotation-matrix in the pack builder.

:ref:`user_defined_coupling_variables_via_udm <user_defined_coupling_variables_via_udm>`                             'user_defined_coupling_variables_via_udm' child.

:ref:`tortuosity_interface <tortuosity_interface>`                                                                                 Setup tortuosity zones and values.

:ref:`pore_size_interface <pore_size_interface>`                                                                        Setup Knudsen diffusion zones and pore sizes.

:ref:`conductive_regions <conductive_regions>`                                                                             Setup conducting zones and conductivities.

:ref:`contact_resistance_regions <contact_resistance_regions>`                                                                 Setup contact surfaces and resistance.

:ref:`range <range>`                                                                                                           Specify piecewise-polynomial settings.

:ref:`reference_frame_velocity <reference_frame_velocity>`                                                                   Set reference frame velocity components.

:ref:`reference_frame_axis_origin <reference_frame_axis_origin>`                                                          Set reference frame axis origin components.

:ref:`reference_frame_axis_direction <reference_frame_axis_direction>`                                                 Set reference frame axis direction components.

:ref:`moving_mesh_velocity <moving_mesh_velocity>`                                                                               Set moving mesh velocity components.

:ref:`moving_mesh_axis_origin <moving_mesh_axis_origin>`                                                                      Set moving mesh axis origin components.

:ref:`moving_mesh_axis_direction <moving_mesh_axis_direction>`                                                             Set moving mesh axis direction components.

:ref:`direction_1_vector <direction_1_vector>`                                                                                     Set direction 1 vector components.

:ref:`direction_2_vector <direction_2_vector>`                                                                                     Set direction 2 vector components.

:ref:`cone_axis_vector <cone_axis_vector>`                                                                                           Set cone axis vector components.

:ref:`point_on_cone_axis <point_on_cone_axis>`                                                                                     Set point on cone axis components.

:ref:`viscous_resistance <viscous_resistance>`                                                                                     Set viscous resistance components.

:ref:`inertial_resistance <inertial_resistance>`                                                                                  Set inertial resistance components.

:ref:`fan_origin <fan_origin>`                                                                                                             Set fan origin components.

:ref:`terms_child <terms_child>`                                                                                                        'child_object_type' of terms.

:ref:`beach_dir_list <beach_dir_list>`                                                                                                Multi-Directional Beach Inputs.

:ref:`axis_direction_1 <axis_direction_1>`                                                                                             Set axis direction components.

:ref:`axis_origin_1 <axis_origin_1>`                                                                                                      Set axis origin components.

:ref:`solid_motion_axis_direction <solid_motion_axis_direction>`                                                          Set solid motion axis direction components.

:ref:`solid_motion_axis_origin <solid_motion_axis_origin>`                                                                   Set solid motion axis origin components.

:ref:`solid_motion_velocity <solid_motion_velocity>`                                                                            Set solid motion velocity components.

:ref:`flow_direction <flow_direction>`                                                                                                 Set flow direction components.

:ref:`axis_direction_2 <axis_direction_2>`                                                                                             Set axis direction components.

:ref:`axis_origin_2 <axis_origin_2>`                                                                                                      Set axis origin components.

:ref:`real_pole_series <real_pole_series>`                                                                                                  List of Real Pole Series.

:ref:`complex_pole_series <complex_pole_series>`                                                                                         List of Complex Pole Series.

:ref:`radial_direction <radial_direction>`                                                                                           Set radial direction components.

:ref:`fan_axis <fan_axis>`                                                                                                             Set axis direction components.

:ref:`fan_origin_1 <fan_origin_1>`                                                                                                        Set axis origin components.

:ref:`direction_vector <direction_vector>`                                                                                           Set direction vector components.

:ref:`axis_direction_3 <axis_direction_3>`                                                                                                        Help not available.

:ref:`axis_origin_3 <axis_origin_3>`                                                                                                              Help not available.

:ref:`shift_component <shift_component>`                                                                                                          Help not available.

:ref:`velocity_components <velocity_components>`                                                                                             Set velocity components.

:ref:`flow_velocity <flow_velocity>`                                                                                                    Set wave velocity components.

:ref:`moving_object_direction <moving_object_direction>`                                                                      Set moving object direction components.

:ref:`secondary_phase_direction <secondary_phase_direction>`                                                                Set secondary phase direction components.

:ref:`primary_phase_direction <primary_phase_direction>`                                                                      Set primary phase direction components.

:ref:`reference_direction <reference_direction>`                                                                                  Set reference direction components.

:ref:`wave_group_inputs <wave_group_inputs>`                                                                                               List of Wave Group Inputs.

:ref:`shallow_wave_inputs <shallow_wave_inputs>`                                                                                         List of Shallow Wave Inputs.

:ref:`pb_disc_components <pb_disc_components>`                                                                                            'pb_disc_components' child.

:ref:`rotation_axis_origin <rotation_axis_origin>`                                                                               Set rotation axis origin components.

:ref:`rotation_axis_direction <rotation_axis_direction>`                                                                      Set rotation axis direction components.

:ref:`direction_2 <direction_2>`                                                                                                     Set wall translation components.

:ref:`periodic_displacement <periodic_displacement>`                                                                            Set periodic displacement components.

:ref:`periodic_imaginary_displacement <periodic_imaginary_displacement>`                                              Set periodic imaginary displacement components.

:ref:`shear_stress <shear_stress>`                                                                                                       Set shear stress components.

:ref:`conduction_layers <conduction_layers>`                                                                                               List of Conduction Layers.

:ref:`thin_wall <thin_wall>`                                                                                                                        Conduction Layer.

:ref:`polar_data_pairs <polar_data_pairs>`                                                                                                  Specify polar data pairs.

:ref:`reference_direction_1 <reference_direction_1>`                                                                              Set radiation direction components.

:ref:`film_velocity <film_velocity>`                                                                                                    Set film velocity components.

:ref:`flux_momentum <flux_momentum>`                                                                                                    Set flux momentum components.

:ref:`momentum_source <momentum_source>`                                                                                              Set momentum source components.

:ref:`injection_1 <injection_1>`                                                                                                                   'injection' child.

:ref:`injection_hole <injection_hole>`                                                                                                        'injection_hole' child.

:ref:`dynamic_injection <dynamic_injection>`                                                                                               'dynamic_injection' child.

:ref:`static_injection <static_injection>`                                                                                                  'static_injection' child.

:ref:`multi_stage <multi_stage>`                                                                                                     Enter multi-stage settings menu.

:ref:`curves <curves>`                                                                                                                     Set parameters for curves.

:ref:`modifications <modifications>`                                                                                                           'modifications' child.

:ref:`lines <lines>`                                                                                                                                   'lines' child.

:ref:`markers <markers>`                                                                                                                             'markers' child.

:ref:`settings_30 <settings_30>`                                                                         Provide custom transparency ranges and values for filtering.

:ref:`settings_31 <settings_31>`                                                                        Provide options for isovalue(s) to highlight inside a volume.

:ref:`settings_32 <settings_32>`                                                                                                     Provide clip box(es) attributes.

:ref:`settings_33 <settings_33>`                                                                                                   Provide clip sphere(s) attributes.

:ref:`lights <lights>`                                                                                                                                'lights' child.

:ref:`entries <entries>`                                                                       List of observables and coefficients for linear combination of powers.

:ref:`invariant_expert_controls <invariant_expert_controls>`                                                                  Advanced settings for invariant motion.

:ref:`parameters_6 <parameters_6>`                                                                                                     Operating condition parameter.

:ref:`conditions_2 <conditions_2>`                                                                                                              Operating conditions.

:ref:`objectives_3 <objectives_3>`                                                                                 Objectives with various parameters and conditions.

:ref:`neural_network_topology <neural_network_topology>`                                                 Set the number of neural network nodes at each hidden layer.

:ref:`partition_origin_vector <partition_origin_vector>`                                                                             'partition_origin_vector' child.

========================================================================================   ==========================================================================

